<resources>
    <string name="app_name">Your Perfect Pet</string>
    <string name="text_login">Sign in</string>
    <string name="text_register">Sign up</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_nick_name">Nickname</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_user_info">User info</string>
    <string name="text_account_info">Account info</string>
    <string name="text_job">Job</string>
    <string name="text_preferences">Favorite pet</string>
    <string name="text_pets">Pets</string>
    <string name="text_profile">Profile</string>
    <string name="text_accept">Accept</string>
    <string name="text_error">Error</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_sing_out">Sign Out</string>
    <string name="text_add_pet">Add Pet</string>
    <string name="text_age">Age</string>
    <string name="text_weight">Weight</string>
    <string name="text_year">Years Old</string>
    <string name="text_picture">Picture</string>
    <string name="text_add">Add</string>
    <string name="text_descrition">Description</string>

    <string-array name="jobs">
        <item>"Employed"</item>
        <item>"Self-Employed"</item>
        <item>"Unemployed"</item>
    </string-array>

    <string-array name="pets">
        <item>"Dogs"</item>
        <item>"Cats"</item>
    </string-array>

    <string-array name="health_state">
        <item>"Excellent"</item>
        <item>"Good"</item>
        <item>"Average"</item>
        <item>"Bad"</item>
    </string-array>

    <string name="msg_welcome">Login into your account or if your are new create one.</string>
    <string name="msg_password_helper">Must contain at least eight characters.</string>
    <string name="msg_empty_fields">Some fields are empty.</string>
    <string name="msg_invalid_email">Provide a properly formatted email address</string>
    <string name="msg_helper_user_picture">User picture</string>
    <string name="msg_register_error">The email %1$s is already registered.</string>
    <string name="msg_login_error">Incorrect username or password.</string>
    <string name="msg_welcome_back">Welcome %1$s!</string>
    <string name="msg_question_pet_type">Is your pet a dog or a cat?</string>
    <string name="msg_question_pet_race">What is your pet\'s race?</string>
    <string name="msg_question_pet_vaccination">Is your pet fully vaccinated?</string>
</resources>