<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingVertical="24dp"
        android:orientation="vertical"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:scaleType="fitXY"

            app:tint="?colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_welcome"
            android:textSize="18sp"
            android:textColor="@color/material_on_surface_emphasis_high_type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_welcome"
            android:textSize="14sp"
            android:textAlignment="center"
            android:paddingBottom="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_activity_btn_login"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"

            app:cornerRadius="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_activity_btn_register"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register"

            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="15dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>