<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                style="@style/Theme.YourPerfectPet.Toolbar"

                android:id="@+id/login_activity_toolbar"

                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                app:title="@string/text_login" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:paddingHorizontal="24dp"
        android:orientation="vertical"
        android:gravity="center|top">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_user_email"

                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"

            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_user_password"

                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn_login"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>

